--- a/src/components/NavOption.astro
+++ b/src/components/NavOption.astro
@@ -11,8 +11,8 @@ const isActive = pathname === path || (label === "Inicio" && pathname === "/");
 ---
 
 <a
-  class={` text-black  hover:text-red-600 ${
-    isActive ? "text-blue-500 font-bold" : ""
+  class={`font-bold  text-black  hover:text-red-600 ${
+    isActive ? "border-b-2 border-black" : ""
   }`}
   href={path}
 >
