--- a/src/components/nav.astro
+++ b/src/components/nav.astro
@@ -1,46 +1,35 @@
 ---
-import styles from "./nav.module.css";
 import NavOption from "./NavOption.astro";
-const pathname: string = Astro.url.pathname;
+import DropDownOption from "./DropDownOption.astro";
 ---
 
 <div class="w-1/3 flex justify-around items-center">
   <NavOption label="Inicio" />
 
-  <!-- Menú desplegable para 'Servicios' -->
-  <div class={styles.dropdown}>
-    <p class={styles.enlaces}>Servicios</p>
-    <div id="dropdownMenu" class={styles.dropdownMenu}>
-      <a href="/desarrolloWeb" class={styles.dropdownItem}>Desarrollo Web</a>
-      <a href="/diseñoWeb" class={styles.dropdownItem}>Diseño Web</a>
-      <a href="/brandingIdentidad" class={styles.dropdownItem}
-        >Branding e Identidad</a
-      >
+  <!-- Menú desplegable para 'Packaging' -->
+  <div class="py-4 relative inline-block group">
+    <NavOption label="Packaging" />
+    <div
+      id="dropdownMenu"
+      class="hidden absolute top-2 left-0 bg-white shadow-lg z-0 min-w-48 rounded-lg py-2 opacity-0 translate-y-2 group-hover:block group-hover:opacity-100 group-hover:translate-y-12"
+    >
+      <DropDownOption label="Bolsas" />
+      <DropDownOption label="Cajas" />
+      <DropDownOption label="Envolturas para alimentos" />
+    </div>
+  </div>
+  <!-- Menú desplegable para 'Imprenta' -->
+  <div class="py-4 relative inline-block group">
+    <NavOption label="Imprenta" />
+    <div
+      id="dropdownMenu"
+      class="hidden absolute top-2 left-0 bg-white shadow-lg z-0 min-w-48 rounded-lg py-2 opacity-0 translate-y-2 group-hover:block group-hover:opacity-100 group-hover:translate-y-12"
+    >
+      <DropDownOption label="Papeleria" />
+      <DropDownOption label="Merchandising" />
+      <DropDownOption label="Impresiones" />
     </div>
   </div>
 
-  <a
-    class={`text-decoration-none text-black font-poppins font-semibold hover:text-blue-500 ${
-      pathname === "/contacto" ? "text-blue-500 font-bold" : ""
-    }`}
-    href="/contacto">Contáctenos</a
-  >
+  <NavOption label="Contacto" />
 </div>
-<script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const dropdownMenu = document.getElementById("dropdownMenu");
-
-    if (!dropdownMenu) {
-      console.error("El elemento 'dropdownMenu' no fue encontrado.");
-      return;
-    }
-    // Escucha el evento de scroll
-    window.addEventListener("scroll", () => {
-      if (window.scrollY > 90) {
-        dropdownMenu.classList.add("scrolled"); // Clase global
-      } else {
-        dropdownMenu.classList.remove("scrolled"); // Clase global
-      }
-    });
-  });
-</script>
