--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,19 +1,28 @@
 ---
 import "../styles/global.css";
-import Header from "../components/header.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+
+const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="es">
+<html class="font-sans" lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="generator" content={Astro.generator} />
-    <title>Astro Basics</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      rel="icon"
+      href="../logo_owlyxblack.webp"
+      type="image/webp"
+      sizes="any"
+    />
+    <title>{title}</title>
   </head>
-  <body>
+  <body class="bg-gray-600">
     <Header />
     <slot />
+    <Footer />
   </body>
 </html>
