--- a/src/components/MainServicios.astro
+++ b/src/components/MainServicios.astro
@@ -42,7 +42,7 @@ const arrayProducts = servicioData ? (servicioData.title === "Imprenta" ? Impren
           </div>
         
       </section>
-      <section class="w-full py-10 flex flex-col items-center bg-red-500">
+      <section class="w-full py-10 flex flex-col items-center bg-yellow-500">
         <h2 class="text-3xl font-bold mb-10 text-center">Productos</h2>
          <div class="w-full flex flex-col items-center justify-center">
            {arrayProducts.map((product) => (
