--- a/src/components/MainContacto.astro
+++ b/src/components/MainContacto.astro
@@ -1,11 +1,16 @@
 ---
-
+import FormularioContacto from "./formularioContacto.astro"
 ---
 
 <main class="pt-14 w-full flex flex-col items-center">
-  <div class="w-full h-[400px] bg-red-500">
+  <section class="w-full h-auto relative">
+  <div class="w-full h-[400px] bg-red-500 relative">
     <img src="../banner.webp" alt="video Somi" class="w-full" />
+    <FormularioContacto class="absolute top-0 left-[80%] w-[300px] h-auto" />
   </div>
+  
+</section>
+
 
   <div class="w-full flex flex-col bg-white">
     <div class="flex flex-row justify-around w-full h-[200px] items-center">
@@ -143,11 +148,17 @@
     </div>
   </div>
 
-  <div class="w-full flex flex-col justify-center items-center bg-white p-4">
+  <div class="w-full h-auto  bg-white">
+    <a href="https://g.co/kgs/D1Y2EPU" target="_blank" rel="noopener noreferrer">
+    <img src="src/public/Captura mapa.PNG" class="object-contain w-full" alt="Mapa">
+  </a>
+  </div>
+
+  <div class="w-full h-full flex flex-col justify-center items-center bg-white p-8  ">
     <h1 class="text-3xl text-gray-500 m-4">Conéctate con nosotros</h1>
 
-    <div class="flex flex-row">
-      <div class="w-14 h-14">
+    <div class="flex flex-row gap-10">
+      <div class="w-12 h-12">
         <a
           href="#"
           target="_blank"
@@ -170,7 +181,7 @@
           >
         </a>
       </div>
-      <div class="w-14 h-14">
+      <div class="w-12 h-12">
         <a
           href="https://www.instagram.com/owlyxteam/"
           target="_blank"
@@ -194,7 +205,7 @@
           >
         </a>
       </div>
-      <div class="w-14 h-14">
+      <div class="w-12  h-12">
         <a href="#" class="mb-2 no-underline w-6 h-6">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -213,9 +224,7 @@
         </a>
       </div>
     </div>
-  </div>
+  </div> 
 
-  <div>
-    <img src="" alt="">
-  </div>
+  
 </main>
