--- a/src/components/MainContacto.astro
+++ b/src/components/MainContacto.astro
@@ -3,13 +3,15 @@ import FormularioContacto from "./formularioContacto.astro"
 ---
 
 <main class="pt-14 w-full flex flex-col items-center">
-  <section class="w-full h-auto relative">
-  <div class="w-full h-[400px] bg-red-500 relative">
-    <img src="../banner.webp" alt="video Somi" class="w-full" />
-    <FormularioContacto class="absolute top-0 left-[80%] w-[300px] h-auto" />
-  </div>
-  
-</section>
+    <section class="w-full h-auto relative">
+    <div class="w-full h-[500px] bg-red-500 relative">
+      <img src="../banner.webp" alt="video Somi" class="w-full" />
+      <div class="absolute top-20  right-40 w-[300px] h-auto shadow-lg">
+        <FormularioContacto />
+      </div>
+    </div>
+    
+  </section>
 
 
   <div class="w-full flex flex-col bg-white">
